# SnapScrap.py

./: .gitignore  Dockerfile  deploy.sh  pyproject.toml
.github/workflows/: docker-publish.yml
function/: README.md  build-function.sh  build.sbt  fetch-original.sh
function/src/main/resources/: logback.xml
function/src/main/scala/org/levaldo/snapscrap/: PubsubFunction.scala
infra/pulumi/: .env.example  Pulumi.dev.yaml  Pulumi.yaml  __main__.py
